--- a/research/01_data_ingestion.ipynb
+++ b/research/01_data_ingestion.ipynb
@@ -12,14 +12,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "d545be9e",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'c:\\\\Users\\\\farha\\\\Kidney-Disease-Classification-MLflow-DVC\\\\research'"
+       "'c:\\\\Users\\\\farha\\\\Kidney-Disease-Classification-DL\\\\research'"
       ]
      },
      "execution_count": 2,
@@ -28,7 +28,8 @@
     }
    ],
    "source": [
-    "%pwd"
+    "%pwd\n",
+    "# to check directory"
    ]
   },
   {
@@ -38,7 +39,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "os.chdir(\"C:/Users/farha/Kidney-Disease-Classification-MLflow-DVC\")"
+    "os.chdir(\"C:/Users/farha/Kidney-Disease-Classification-DL\")"
    ]
   },
   {
@@ -50,7 +51,7 @@
     {
      "data": {
       "text/plain": [
-       "'C:\\\\Users\\\\farha\\\\Kidney-Disease-Classification-MLflow-DVC'"
+       "'C:\\\\Users\\\\farha\\\\Kidney-Disease-Classification-DL'"
       ]
      },
      "execution_count": 4,
@@ -190,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "98e30c28",
    "metadata": {},
    "outputs": [
@@ -198,11 +199,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2025-12-13 16:03:33,927: INFO: common: yaml file: config\\config.yaml loaded successfully]\n",
-      "[2025-12-13 16:03:33,932: INFO: common: yaml file: params.yaml loaded successfully]\n",
-      "[2025-12-13 16:03:33,934: INFO: common: created directory at: artifacts]\n",
-      "[2025-12-13 16:03:33,936: INFO: common: created directory at: artifacts/data_ingestion]\n",
-      "[2025-12-13 16:03:33,938: INFO: 986331348: Downloading data from https://drive.google.com/file/d/15_tLbn8WEEX4nq4-eZoh7_EgzJXBgHBQ/view?usp=sharing into file artifacts/data_ingestion/data.zip]\n"
+      "[2025-12-15 17:14:48,119: INFO: common: yaml file: config\\config.yaml loaded successfully]\n",
+      "[2025-12-15 17:14:48,124: INFO: common: yaml file: params.yaml loaded successfully]\n",
+      "[2025-12-15 17:14:48,126: INFO: common: created directory at: artifacts]\n",
+      "[2025-12-15 17:14:48,128: INFO: common: created directory at: artifacts/data_ingestion]\n",
+      "[2025-12-15 17:14:48,129: INFO: 986331348: Downloading data from https://drive.google.com/file/d/15_tLbn8WEEX4nq4-eZoh7_EgzJXBgHBQ/view?usp=sharing into file artifacts/data_ingestion/data.zip]\n"
      ]
     },
     {
@@ -211,23 +212,92 @@
      "text": [
       "Downloading...\n",
       "From (original): https://drive.google.com/uc?/export=download&id=15_tLbn8WEEX4nq4-eZoh7_EgzJXBgHBQ\n",
-      "From (redirected): https://drive.google.com/uc?%2Fexport=download&id=15_tLbn8WEEX4nq4-eZoh7_EgzJXBgHBQ&confirm=t&uuid=253f4499-5496-47a0-a0de-914217076679\n",
-      "To: C:\\Users\\farha\\Kidney-Disease-Classification-MLflow-DVC\\artifacts\\data_ingestion\\data.zip\n",
-      "100%|██████████| 940M/940M [00:56<00:00, 16.7MB/s] "
+      "From (redirected): https://drive.google.com/uc?%2Fexport=download&id=15_tLbn8WEEX4nq4-eZoh7_EgzJXBgHBQ&confirm=t&uuid=6874174a-c56b-4a6b-859e-fb62492ce9a2\n",
+      "To: C:\\Users\\farha\\Kidney-Disease-Classification-DL\\artifacts\\data_ingestion\\data.zip\n",
+      "  0%|          | 1.05M/940M [00:00<08:43, 1.79MB/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2025-12-13 16:04:34,395: INFO: 986331348: Downloaded data from https://drive.google.com/file/d/15_tLbn8WEEX4nq4-eZoh7_EgzJXBgHBQ/view?usp=sharing into file artifacts/data_ingestion/data.zip]\n"
+      "Unexpected exception formatting exception. Falling back to standard exception\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\n"
+      "Traceback (most recent call last):\n",
+      "  File \"c:\\Users\\farha\\miniconda3\\envs\\kidney2\\lib\\site-packages\\IPython\\core\\interactiveshell.py\", line 3550, in run_code\n",
+      "    exec(code_obj, self.user_global_ns, self.user_ns)\n",
+      "  File \"C:\\Users\\farha\\AppData\\Local\\Temp\\ipykernel_17052\\1803582706.py\", line 5, in <module>\n",
+      "    data_ingestion.download_file()\n",
+      "  File \"C:\\Users\\farha\\AppData\\Local\\Temp\\ipykernel_17052\\986331348.py\", line 19, in download_file\n",
+      "    gdown.download(prefix+file_id,zip_download_dir)\n",
+      "  File \"c:\\Users\\farha\\miniconda3\\envs\\kidney2\\lib\\site-packages\\gdown\\download.py\", line 368, in download\n",
+      "    for chunk in res.iter_content(chunk_size=CHUNK_SIZE):\n",
+      "  File \"c:\\Users\\farha\\miniconda3\\envs\\kidney2\\lib\\site-packages\\requests\\models.py\", line 820, in generate\n",
+      "    yield from self.raw.stream(chunk_size, decode_content=True)\n",
+      "  File \"c:\\Users\\farha\\miniconda3\\envs\\kidney2\\lib\\site-packages\\urllib3\\response.py\", line 1253, in stream\n",
+      "    data = self.read(amt=amt, decode_content=decode_content)\n",
+      "  File \"c:\\Users\\farha\\miniconda3\\envs\\kidney2\\lib\\site-packages\\urllib3\\response.py\", line 1108, in read\n",
+      "    data = self._raw_read(amt)\n",
+      "  File \"c:\\Users\\farha\\miniconda3\\envs\\kidney2\\lib\\site-packages\\urllib3\\response.py\", line 1024, in _raw_read\n",
+      "    data = self._fp_read(amt, read1=read1) if not fp_closed else b\"\"\n",
+      "  File \"c:\\Users\\farha\\miniconda3\\envs\\kidney2\\lib\\site-packages\\urllib3\\response.py\", line 1007, in _fp_read\n",
+      "    return self._fp.read(amt) if amt is not None else self._fp.read()\n",
+      "  File \"c:\\Users\\farha\\miniconda3\\envs\\kidney2\\lib\\http\\client.py\", line 463, in read\n",
+      "    n = self.readinto(b)\n",
+      "  File \"c:\\Users\\farha\\miniconda3\\envs\\kidney2\\lib\\http\\client.py\", line 507, in readinto\n",
+      "    n = self.fp.readinto(b)\n",
+      "  File \"c:\\Users\\farha\\miniconda3\\envs\\kidney2\\lib\\socket.py\", line 716, in readinto\n",
+      "    return self._sock.recv_into(b)\n",
+      "  File \"c:\\Users\\farha\\miniconda3\\envs\\kidney2\\lib\\ssl.py\", line 1277, in recv_into\n",
+      "    return self.read(nbytes, buffer)\n",
+      "  File \"c:\\Users\\farha\\miniconda3\\envs\\kidney2\\lib\\ssl.py\", line 1135, in read\n",
+      "    return self._sslobj.read(len, buffer)\n",
+      "KeyboardInterrupt\n",
+      "\n",
+      "During handling of the above exception, another exception occurred:\n",
+      "\n",
+      "Traceback (most recent call last):\n",
+      "  File \"c:\\Users\\farha\\miniconda3\\envs\\kidney2\\lib\\site-packages\\IPython\\core\\interactiveshell.py\", line 2144, in showtraceback\n",
+      "    stb = self.InteractiveTB.structured_traceback(\n",
+      "  File \"c:\\Users\\farha\\miniconda3\\envs\\kidney2\\lib\\site-packages\\IPython\\core\\ultratb.py\", line 1435, in structured_traceback\n",
+      "    return FormattedTB.structured_traceback(\n",
+      "  File \"c:\\Users\\farha\\miniconda3\\envs\\kidney2\\lib\\site-packages\\IPython\\core\\ultratb.py\", line 1326, in structured_traceback\n",
+      "    return VerboseTB.structured_traceback(\n",
+      "  File \"c:\\Users\\farha\\miniconda3\\envs\\kidney2\\lib\\site-packages\\IPython\\core\\ultratb.py\", line 1173, in structured_traceback\n",
+      "    formatted_exception = self.format_exception_as_a_whole(etype, evalue, etb, number_of_lines_of_context,\n",
+      "  File \"c:\\Users\\farha\\miniconda3\\envs\\kidney2\\lib\\site-packages\\IPython\\core\\ultratb.py\", line 1088, in format_exception_as_a_whole\n",
+      "    frames.append(self.format_record(record))\n",
+      "  File \"c:\\Users\\farha\\miniconda3\\envs\\kidney2\\lib\\site-packages\\IPython\\core\\ultratb.py\", line 970, in format_record\n",
+      "    frame_info.lines, Colors, self.has_colors, lvals\n",
+      "  File \"c:\\Users\\farha\\miniconda3\\envs\\kidney2\\lib\\site-packages\\IPython\\core\\ultratb.py\", line 792, in lines\n",
+      "    return self._sd.lines\n",
+      "  File \"c:\\Users\\farha\\miniconda3\\envs\\kidney2\\lib\\site-packages\\stack_data\\utils.py\", line 145, in cached_property_wrapper\n",
+      "    value = obj.__dict__[self.func.__name__] = self.func(obj)\n",
+      "  File \"c:\\Users\\farha\\miniconda3\\envs\\kidney2\\lib\\site-packages\\stack_data\\core.py\", line 734, in lines\n",
+      "    pieces = self.included_pieces\n",
+      "  File \"c:\\Users\\farha\\miniconda3\\envs\\kidney2\\lib\\site-packages\\stack_data\\utils.py\", line 145, in cached_property_wrapper\n",
+      "    value = obj.__dict__[self.func.__name__] = self.func(obj)\n",
+      "  File \"c:\\Users\\farha\\miniconda3\\envs\\kidney2\\lib\\site-packages\\stack_data\\core.py\", line 677, in included_pieces\n",
+      "    scope_pieces = self.scope_pieces\n",
+      "  File \"c:\\Users\\farha\\miniconda3\\envs\\kidney2\\lib\\site-packages\\stack_data\\utils.py\", line 145, in cached_property_wrapper\n",
+      "    value = obj.__dict__[self.func.__name__] = self.func(obj)\n",
+      "  File \"c:\\Users\\farha\\miniconda3\\envs\\kidney2\\lib\\site-packages\\stack_data\\core.py\", line 614, in scope_pieces\n",
+      "    scope_start, scope_end = self.source.line_range(self.scope)\n",
+      "  File \"c:\\Users\\farha\\miniconda3\\envs\\kidney2\\lib\\site-packages\\stack_data\\core.py\", line 178, in line_range\n",
+      "    return line_range(self.asttext(), node)\n",
+      "AttributeError: 'Source' object has no attribute 'asttext'\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "  0%|          | 1.57M/940M [00:20<08:43, 1.79MB/s]"
      ]
     }
    ],
@@ -259,7 +329,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.19"
+   "version": "3.9.25"
   }
  },
  "nbformat": 4,
